# zuihitsu

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.toml  LICENSE  README.md  deploy.yaml  flake.nix  fleet.yaml  index.html
.github/workflows/: ci.yml  flakehub.yml  gen-spec.yml
chart/zuihitsu/: Chart.yaml  values.yaml
chart/zuihitsu/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
crates/zuihitsu-app/: Cargo.toml
crates/zuihitsu-app/src/: app.rs  lib.rs  main.rs  router.rs
crates/zuihitsu-app/src/entities/: mod.rs  post.rs  publication.rs  tag.rs
crates/zuihitsu-app/src/features/: mod.rs
crates/zuihitsu-app/src/features/newsletter/components/: mod.rs  subscribe_form.rs
crates/zuihitsu-app/src/features/post_detail/components/: article.rs  mod.rs  prose.rs
crates/zuihitsu-app/src/features/posts/components/: mod.rs  post_card.rs  post_list.rs  tag_chip.rs
crates/zuihitsu-app/src/infra/: draft.rs  feed.rs  mod.rs
crates/zuihitsu-app/src/infra/graphql/: client.rs  mod.rs  queries.rs
crates/zuihitsu-app/src/infra/markdown/: mod.rs
crates/zuihitsu-app/src/infra/observability/: mod.rs
crates/zuihitsu-app/src/infra/utils/: format.rs  mod.rs  xml.rs
crates/zuihitsu-app/src/pages/: about.rs  home.rs  mod.rs  not_found.rs  post.rs  tag.rs
crates/zuihitsu-app/src/providers/: mod.rs  pwa.rs  theme.rs
crates/zuihitsu-app/src/shared/: mod.rs  server_fns.rs  sw.rs
crates/zuihitsu-app/src/shared/hooks/: mod.rs  use_online_status.rs  use_version_check.rs
crates/zuihitsu-app/src/shared/stores/: mod.rs
crates/zuihitsu-app/src/static_render/: mod.rs
crates/zuihitsu-app/src/widgets/: footer.rs  header.rs  mod.rs  page_shell.rs
crates/zuihitsu-dev/: Cargo.toml
crates/zuihitsu-dev/src/: main.rs
crates/zuihitsu-dev/src/cmd/: draft.rs  fetch.rs  mod.rs  worker_test.rs
crates/zuihitsu-dev/src/daemon/: build.rs  mod.rs  poller.rs  server.rs  watch.rs
crates/zuihitsu-dev/src/embedded/: livereload.js
crates/zuihitsu-worker/: Cargo.toml  wrangler.toml
crates/zuihitsu-worker/src/: lib.rs
k8s-manifests/infrastructure/zuihitsu/: helmrelease.yaml
pangea/: CLAUDE.md  Gemfile  fleet.yaml  pangea.yml  zuihitsu.rb
public/: manifest.json  robots.txt  sw.js  version.json
style/: ishou.css  kamon.css  main.css
