[workspace]
members = ["crates/zuihitsu-app"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"

[workspace.dependencies]
leptos = "0.7"
leptos_router = "0.7"
leptos_meta = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cfg-if = "1"
http = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
thiserror = "2"

# Hydrate-side (wasm32)
wasm-bindgen = "=0.2.99"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Navigator", "Storage",
    "HtmlElement", "Location", "History",
    "ServiceWorkerContainer", "ServiceWorkerRegistration",
    "CustomEvent", "Event", "EventTarget",
    "StorageEvent",
] }
js-sys = "0.3"
gloo-net = "0.6"
gloo-storage = "0.3"
gloo-timers = "0.3"
gloo-events = "0.2"
gloo-utils = "0.2"
console_error_panic_hook = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "registry", "env-filter"] }
tracing-web = "0.1"

# SSR-side (native)
leptos_axum = "0.7"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "compression-br", "compression-gzip", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli"] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
anyhow = "1"

# Dev
proptest = "1"
insta = { version = "1", features = ["json"] }

[workspace.lints.clippy]
pedantic = "warn"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
