[package]
name = "zuihitsu-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "zuihitsu (随筆) — personal tech blog, Leptos SSR+hydrate rendering Hashnode content"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "zuihitsu"
path = "src/main.rs"
required-features = ["ssr-server"]

[[bin]]
name = "zuihitsu-sitegen"
path = "src/bin/sitegen.rs"
required-features = ["sitegen"]

[dependencies]
leptos.workspace = true
leptos_router.workspace = true
leptos_meta.workspace = true
serde.workspace = true
serde_json.workspace = true
cfg-if.workspace = true
http.workspace = true
chrono.workspace = true
thiserror.workspace = true

# Hydrate-only
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
gloo-net = { workspace = true, optional = true }
gloo-storage = { workspace = true, optional = true }
gloo-timers = { workspace = true, optional = true }
gloo-events = { workspace = true, optional = true }
gloo-utils = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }
tracing-web = { workspace = true, optional = true }

# SSR-only
leptos_axum = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
pulldown-cmark = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

# SSR + sitegen (Hashnode disk cache, parallel fetches, drafts, CLI flags)
blake3 = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
serde_yaml_ng = { workspace = true, optional = true }

# Shared
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
insta.workspace = true

[features]
default = []
ssr = [
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:reqwest",
    "dep:pulldown-cmark",
    "dep:anyhow",
    "dep:tracing-subscriber",
    "dep:blake3",
    "dep:futures",
    "leptos/ssr",
    "leptos_meta/ssr",
]
# SSR axum binary. Gated off `ssr` because leptos_axum 0.7 + axum 0.8 hit an
# API skew on `.leptos_routes` — the library tree compiles cleanly but the
# server wiring in `main.rs` does not. The K3s SSR render target is
# `active: false` in `deploy.yaml`; activate this feature once either axum is
# pinned back to 0.7 or leptos_axum is upgraded past the break.
ssr-server = ["ssr"]
hydrate = [
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "dep:js-sys",
    "dep:gloo-net",
    "dep:gloo-storage",
    "dep:gloo-timers",
    "dep:gloo-events",
    "dep:gloo-utils",
    "dep:console_error_panic_hook",
    "dep:tracing-web",
    "leptos/hydrate",
]
# Static site generator (Cloudflare Pages target). Pulls the SSR-side deps
# it needs without axum / leptos_axum / tower. Adds blake3 (Hashnode disk
# cache key), futures (parallel post fetches), clap (--only / --drafts
# flags), and serde_yaml_ng (drafts frontmatter).
sitegen = [
    "dep:tokio",
    "dep:reqwest",
    "dep:pulldown-cmark",
    "dep:anyhow",
    "dep:tracing-subscriber",
    "dep:blake3",
    "dep:futures",
    "dep:clap",
    "dep:serde_yaml_ng",
]

[lints]
workspace = true

[package.metadata.leptos]
output-name = "zuihitsu"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
assets-dir = "public"
site-addr = "0.0.0.0:3000"
reload-port = 3001
browserquery = "defaults"
bin-features = ["ssr"]
lib-features = ["hydrate"]
lib-profile-release = "wasm-release"
