[package]
name = "zuihitsu-dev"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "zuihitsu — dev daemon + authoring CLI (watch, hot-reload, drafts, cache, webhook test)"

[[bin]]
name = "zuihitsu-dev"
path = "src/main.rs"

[dependencies]
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "process", "fs", "time", "io-util", "sync"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["fs", "trace"] }
clap = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true
