[package]
name = "zuihitsu-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cloudflare Worker for zuihitsu — Hashnode webhook receiver, triggers Pages rebuild"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5", features = ["http"] }
serde = { workspace = true }
serde_json = { workspace = true }
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

[lints]
workspace = true
